# PadBus

./: .gitignore  CMakeLists.txt  README.md
include/PadBus/: CRC.h  Event.h  IBusIODriver.h  IObservable.h  IState.h  StateMachine.h
include/PadBus/Client/: PadClient.h
scratch/: main.cpp
src/: CRC.cpp  Event.cpp  FunctionObserver.cpp  IObserver.cpp  StateMachine.cpp  Subject.cpp
src/Client/: InitializingState.cpp  PadClient.cpp
test/: CMakeLists.txt  CRC_tests.cpp  Event_tests.cpp  StateMachine_tests.cpp
